fixed center alignment issue with pop-up boxes for deleting items

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -758,7 +758,7 @@ nav .brand-logo {
         float: right;
     }
 
-    .delete-account {
+    .delete-record {
         float: left;
     }
 
